# Bookinz

./: .gitignore  README.md  explore.ipynb  pyproject.toml  run_airbnb_accommodation.ps1  run_airbnb_availability.ps1  run_airbnb_facility.ps1  run_booking_accommodation.ps1  run_scraper.ps1
data/airbnb/bronze/accommodations/search_area=Lisbon__Portugal/scrape_date=2026-05-09/: run_2026-05-09T14-08-20.parquet
data/airbnb/bronze/accommodations/search_area=Rome__Italy/scrape_date=2026-05-09/: run_2026-05-09T12-23-26.parquet
data/airbnb/bronze/facilities/facility_id=1024456964816487166/scrape_date=2026-05-09/: run_2026-05-09T15-28-25.parquet
data/airbnb/bronze/facilities/facility_id=1325135632488087578/scrape_date=2026-05-09/: run_2026-05-09T15-22-47.parquet
data/airbnb/silver/accommodations/: silver_2026-05-09T12-32-35.parquet
src/bookinz/: __init__.py
src/bookinz/alerts/: __init__.py  availability_monitor.py
src/bookinz/pipeline/: __init__.py  airbnb_availability_pipeline.py  airbnb_facility_pipeline.py  airbnb_pipeline.py  booking_pipeline.py  daily_pipeline.py
src/bookinz/scraper/: __init__.py  airbnb_availability_scraper.py  airbnb_facility_scraper.py  airbnb_scraper.py  booking_scraper.py
src/bookinz/storage/: __init__.py  airbnb_accommodation_bronze_layer.py  airbnb_availability_bronze_layer.py  airbnb_bronze_layer.py  airbnb_facility_bronze_layer.py  airbnb_silver_layer.py  booking_accommodation_bronze_layer.py  booking_bronze_layer.py  booking_silver_layer.py  bronze_layer.py  data_lake.py
src/bookinz/storage/sql/: airbnb_silver_layer.sql  booking_silver_layer.sql
tests/: test_airbnb_accommodation_bronze_layer.py  test_airbnb_availability_scraper.py  test_airbnb_bronze_layer.py  test_airbnb_facility_scraper.py  test_airbnb_scraper.py  test_availability_monitor.py  test_booking_accommodation_bronze_layer.py  test_bronze_layer.py  test_data_lake.py  test_scraper.py
(+10 files in other folders)
