[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookinz"
version = "0.1.0"
description = "Daily booking.com accommodation stats scraper with bronze-silver-gold data lake"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "pyarrow>=14.0",
    "pandas>=2.1",
    "duckdb>=0.10",
    "schedule>=1.2",
    "fake-useragent>=1.4",
    "tenacity>=8.2",
    "cloudscraper>=1.2",
    "playwright>=1.40",
    "geopy>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
bookinz-run             = "bookinz.pipeline.booking_pipeline:main"
airbnb-run              = "bookinz.pipeline.airbnb_pipeline:main"
airbnb-facility-run     = "bookinz.pipeline.airbnb_facility_pipeline:main"
airbnb-availability-run = "bookinz.pipeline.airbnb_availability_pipeline:main"
